<resources>
    <string name="app_name">Simple Calculator</string>
    <string name="Calc_Text">0</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="Divide">/</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="multiply">*</string>
    <string name="_1">1</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="Minus">-</string>
    <string name="_0">0</string>
    <string name="_clr">clr</string>
    <string name="Plus">+</string>
    <string name="Equals">=</string>
    <string name="dot">.</string>
</resources>