<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BgFundo"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvInput"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/Result_Square_Screen"
        android:padding="10dp"
        android:textSize="48sp"
        android:gravity="end|bottom"
        />
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_weight="1"
    >
<!-- layout_weight above help to fit the bottons   -->
    <Button
    android:id="@+id/btSeven"
    android:layout_width="0dp"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:layout_margin="2dp"
    android:onClick="onDigit"
    android:text="@string/_7"
    android:textSize="20dp"

    />
    <Button
        android:id="@+id/btEight"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_margin="2dp"
        android:onClick="onDigit"
        android:text="@string/_8"
        android:textSize="20dp"
    />
    <Button
        android:id="@+id/btNine"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_margin="2dp"
        android:onClick="onDigit"
        android:text="@string/_9"
        android:textSize="20dp"

        />
    <Button
        android:id="@+id/btDivide"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_margin="2dp"
        android:onClick="onOperator"
        android:text="@string/Divide"
        android:textSize="20dp"

        />


</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/btFour"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:text="@string/_4"
            android:textSize="20dp"

            />
        <Button
            android:id="@+id/btFive"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:text="@string/_5"
            android:textSize="20dp"
            />
        <Button
            android:id="@+id/btSix"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:text="@string/_6"
            android:textSize="20dp"

            />
        <Button
            android:id="@+id/btMultiply"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onOperator"
            android:text="@string/multiply"
            android:textSize="20dp"

            />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/btOne"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:text="@string/_1"
            android:textSize="20dp"

            />
        <Button
            android:id="@+id/btTwo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:text="@string/_2"
            android:textSize="20dp"
            />
        <Button
            android:id="@+id/btThree"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:text="@string/_3"
            android:textSize="20dp"

            />
        <Button
            android:id="@+id/btMinus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onOperator"
            android:text="@string/Minus"
            android:textSize="20dp"

            />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/btDot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onDecimalPoint"
            android:text="@string/dot"
            android:textSize="20dp"

            />
        <Button
            android:id="@+id/btZero"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:text="@string/_0"
            android:textSize="20dp"

            />
        <Button
            android:id="@+id/btCLR"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onClear"
            android:text="@string/_clr"
            android:textSize="20dp"
            />
        <Button
            android:id="@+id/btPlus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onOperator"
            android:text="@string/Plus"
            android:textSize="20dp"

            />



    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/btEquals"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:layout_margin="2dp"
            android:onClick="onEqual"
            android:text="@string/Equals"
            android:textSize="20dp"

            />




    </LinearLayout>



</LinearLayout>
<!--This is  a comment-->




